variables.RunFour.scala.error
Erreur de compilation :
RunFour:4: error: not found: value True
  if(estSurBiscuit==True){
                    ^RunFour:5: error: value =+ is not a member of Int
    nbBiscuit=+1
             ^